FIXED GAP

--- a/asg13/styles.css
+++ b/asg13/styles.css
@@ -43,7 +43,7 @@ header {
 
 .jobs {
     display: flex;
-    gap: 2rem;
+    gap: 0.5rem
     flex-wrap: wrap;
     justify-content: space-between;
 }
